[tool.poetry]
name = "mineralex"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
ginza = "^4.0.5"
spacy = ">=2.3.2,<3.0.0"
fastapi = "^0.63.0"
pydantic = "^1.8.1"
uvicorn = "^0.13.4"
numpy = "^1.20.2"
scipy = "^1.6.3"
pandas = "^1.2.4"
matplotlib = "^3.4.1"
seaborn = "^0.11.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.1"
black = "^21.4b2"
isort = "^5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
